Add com.poiyomi.toon to remove existing VCC Toon version on install.

--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
   "changelogUrl": "https://github.com/poiyomi/PoiyomiPatreon/releases",
   "legacyFolders": {
     "Assets\\_PoiyomiShaders": ""
-  }
+  },
+  "legacyPackages": [
+    "com.poiyomi.toon"
+  ]
 }
